# buicap-py

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: pypi-publish.yml  test-publish.yml
src/buicap_py/: __init__.py  _core.py  api.py  const.py  error_codes.py  exceptions.py
tests/functional/: test_hardware.py
tests/unit/: test_api.py
